# ChangeLog for app-emulation/emul-linux-x86-java
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-java/ChangeLog,v 1.66 2009/03/11 22:50:59 maekke Exp $

  11 Mar 2009; Markus Meier <maekke@gentoo.org>
  emul-linux-x86-java-1.6.0.12.ebuild:
  amd64 stable, bug #261500

*emul-linux-x86-java-1.6.0.12 (05 Feb 2009)

  05 Feb 2009; Serkan Kaba <serkan@gentoo.org>
  -emul-linux-x86-java-1.4.2.18.ebuild,
  -emul-linux-x86-java-1.5.0.16.ebuild,
  -emul-linux-x86-java-1.6.0.07.ebuild,
  -emul-linux-x86-java-1.6.0.10.ebuild,
  +emul-linux-x86-java-1.6.0.12.ebuild:
  Version bump. Remove old vulnerable versions.

  10 Dec 2008; Markus Meier <maekke@gentoo.org>
  emul-linux-x86-java-1.4.2.19.ebuild, emul-linux-x86-java-1.5.0.17.ebuild,
  emul-linux-x86-java-1.6.0.11.ebuild:
  amd64/x86 stable, bug #250012

*emul-linux-x86-java-1.6.0.11 (06 Dec 2008)
*emul-linux-x86-java-1.5.0.17 (06 Dec 2008)
*emul-linux-x86-java-1.4.2.19 (06 Dec 2008)

  06 Dec 2008; Petteri Räty <betelgeuse@gentoo.org>
  +emul-linux-x86-java-1.4.2.19.ebuild,
  +emul-linux-x86-java-1.5.0.17.ebuild,
  +emul-linux-x86-java-1.6.0.11.ebuild:
  Version bumps for security bug #250012.

  06 Dec 2008; Petteri Räty <betelgeuse@gentoo.org>
  -emul-linux-x86-java-1.4.2.17.ebuild,
  -emul-linux-x86-java-1.5.0.15.ebuild,
  -emul-linux-x86-java-1.6.0.05.ebuild,
  -emul-linux-x86-java-1.6.0.05-r1.ebuild,
  -emul-linux-x86-java-1.6.0.06.ebuild:
  Remove old versions.

  17 Nov 2008; Kenneth Prugh <ken69267@gentoo.org>
  emul-linux-x86-java-1.6.0.10.ebuild:
  amd64 stable, bug #246995

*emul-linux-x86-java-1.6.0.10 (17 Oct 2008)

  17 Oct 2008; Serkan Kaba <serkan@gentoo.org>
  +emul-linux-x86-java-1.6.0.10.ebuild:
  Version bump with several changes and improvements. Visit
  http://java.sun.com/javase/6/webnotes/6u10.html for more info.

  16 Sep 2008; Serkan Kaba <serkan@gentoo.org>