@@ -8,18 +8,20 @@ AUX emul-linux-x86-java-1.5.env 855 RMD160 e9ce4d40ee6a8bd9b0720e00838c399d5f3fd
 AUX emul-linux-x86-java-1.6.env 894 RMD160 86bb5a85c4a7b51a52016376438052673da53636 SHA1 8d62dde36f42a769246235662d6f9b25490cd4c8 SHA256 47fa2c1923a0ee6940cc1deb8a12258d900cacbeabcf3e69b5bbc85ce39dc4df
 DIST j2re-1_4_2_19-linux-i586.bin 14384815 RMD160 54b15f0ea03c7cb7e35b91fe8a6269e21a0d39b2 SHA1 7b230633bf6eaf3581f69d668542431c5833184a SHA256 d1d2f7cd9f0cddee9f65a0d093a0718faceb4b013b0658a92457512f84c8e973
 DIST jdk-5.0u17-dlj-linux-i586.bin 49690762 RMD160 a9baa1a26acf284b31b7b81278bd32a7dada7c38 SHA1 d9f72fbb0aed5c27d7d40671a318597906771fd9 SHA256 427a6abd1435c23bf3bc953cca13a0d3b22f3be5e1c1bb14d21ac88e898c021a
-DIST jdk-6u11-dlj-linux-i586.bin 80060361 RMD160 ad6a4f82d103fb7e101351b7347ca8a9992a72db SHA1 6c1bb54d383e1fff69c5e33bfe9e3fcc05c653ab SHA256 c41faea381c3abae0e973a19b88f6e17f83c66fc6bc602a05ccd9a1c3d8a9303
+DIST jdk-5.0u18-dlj-linux-i586.bin 49702576 RMD160 be719b111ce24d5a14b0ed8ad26a9335283866f7 SHA1 2be236e00cf95a7ba1d2a48156eecd6bd367445d SHA256 460dd267a532d9965e65aec8be8288870ff4aadc0cabe331dd4a1d4c058c53be
 DIST jdk-6u12-dlj-linux-i586.bin 80137544 RMD160 ecf3c45703950e946874b9347d9f0d2145da1d26 SHA1 bbbb8cd68fa206e85e78221f3600b41ceb306896 SHA256 97348da8b3c1d92421fffd24766127e0eba2770ab10b014855e867b4eedb680c
+DIST jdk-6u13-dlj-linux-i586.bin 80161911 RMD160 8167ed89d38722577547d4f46f5fa06cf07fedf3 SHA1 ef9177f519ad03669921876fd711c1c02f306abf SHA256 a07d48549bb48becf7a1185b2ce908797a9dcfcc834ff111e8b6d9ad19ce60d7
 EBUILD emul-linux-x86-java-1.4.2.19.ebuild 3525 RMD160 85fc676e851dd796e2c207029e050a3db17a43d1 SHA1 67663c8e09a985935255ba59981a9c7fc3d6b75f SHA256 87891a57830a900f3d48b7dd051244ca8599aed00b8257b6711600678fab106e
 EBUILD emul-linux-x86-java-1.5.0.17.ebuild 2865 RMD160 122095cd87576e4a1238de4ef437001619f8df1c SHA1 efcb8f7071c1af246c14473745f2971e6364750f SHA256 8d0085cd176d2dcf77ef8b53be0ea9b472975bcb183dec9bada7c9b4140f9067
-EBUILD emul-linux-x86-java-1.6.0.11.ebuild 3224 RMD160 1048c973d3d3266016d026cf7de7675b3181b56e SHA1 8d7d4359001f66a01d526819028b050cda7d1240 SHA256 0a174c69ca92ce89e1e48dbf1138aa88fbafd98616c8c991749866889a5ed17d
+EBUILD emul-linux-x86-java-1.5.0.18.ebuild 2866 RMD160 c626b27e4767e01ba9525a191f21e5103e01b439 SHA1 4bfa44ada084fb2176fd0ec8771f9d195fa88811 SHA256 6a7d634dc15b22013b3a6b141024a9b14e061cf25aef3d7d5aed5894512461e6
 EBUILD emul-linux-x86-java-1.6.0.12.ebuild 3224 RMD160 6b98e51eb4bceaf1eafe286b153a1a8cd4c4c126 SHA1 628eb2e1b432d1ef7e40ce9a17099a80b66a43a1 SHA256 71dc4b764fff4fce71a9e3ade9c7eb29b69ea34e6decb117473f121cf25627aa
-MISC ChangeLog 13866 RMD160 639c41ccf506d21fbb65d96edfd4072f253199ee SHA1 34f920e8eccf9f27c82a2a56767db2c866a17cac SHA256 c85f15c7186fb41ec80016dd66a9f03f3d7d9f7b09851f84af7b09f8392885a1
+EBUILD emul-linux-x86-java-1.6.0.13.ebuild 3225 RMD160 8b1dcf013eb9bc9979e7470f86a799aadb8e89c9 SHA1 6240eab52e26f107b24cd728b4d403ccc7d55e21 SHA256 2c1007a03256248875ef81fb6dbe7b1624b63f45e0b442d7d4b1da7590ca6ae0
+MISC ChangeLog 14176 RMD160 725229b9bfe059100037413807c0d006723182d2 SHA1 76ca72780ffe62aa685b78db6abafa3021e2a625 SHA256 0838cd1bbcd5be90103199f024314b2265613976711456b6cf0dfbfba4e7d9cf
 MISC metadata.xml 179 RMD160 eb23cc92511920eee7575e49cb97e3cc57ec2ffe SHA1 5f572596a2c474e808cdb21b8c2bf80f7cc011b1 SHA256 28110c7811a1bdcba5e23efc7018238140b1e9460b78215f914b7253a8c09ca8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkm4QGEACgkQkKaRLQcq0GKzFwCeIYP9uLySP71F9Kou6xzM/1XY
-/IgAn1OxIIk+gZ1uIy4vnVX6zAZZfJ67
-=J832
+iEYEARECAAYFAknLDCkACgkQRh6X64ivZaI3qgCdHOvLu4vqF4em6k7r1bR4MUP4
+D9UAnA2FPhtEvRP/GUWh3M0g3ag8RAEH
+=jsUb
 -----END PGP SIGNATURE-----
